--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="coin" id="coin">
             <div class="heads">
-                <img src="https://archives.bulbagarden.net/media/upload/b/b2/GPMT_Purple_Mewtwo_Coin.png">
+                <img src="heads.png">
             </div>
             <div class="tails">
-                <img src="https://archives.bulbagarden.net/media/upload/d/d0/EPC_Silver_Eternatus_Coin.png">
+                <img src="tails.png">
             </div>
         </div>
          <div class="stats">
