--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="coin" id="coin">
             <div class="heads">
-                <img src="heads.png">
+                <img src="Arceus.png">
             </div>
             <div class="tails">
-                <img src="tails.png">
+                <img src="Giratina.png">
             </div>
         </div>
          <div class="stats">
