--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Sono:wght@500&display=swap" rel="stylesheet">
 	<link href="coinflip.css" rel="stylesheet">
+	<link rel="icon" href="Pikachu.ico" type="image/x-icon"/>
     <title>Coin Flip</title>
 </head>
 <body>
